add_subdirectory(poutreBase  ${TEMPORARY_DIRECTORY}/poutreBaseTests)
add_subdirectory(poutreNeuralNets  ${TEMPORARY_DIRECTORY}/poutreNeuralNetsTests)
add_subdirectory(poutreImageProcessing ${TEMPORARY_DIRECTORY}/poutreImageProcessingTests)
add_subdirectory(poutreIO ${TEMPORARY_DIRECTORY}/poutreIOTests)