add_subdirectory(poutreBase  ${TEMPORARY_DIRECTORY}/poutreBaseTests)
add_subdirectory(poutreImageProcessingCore ${TEMPORARY_DIRECTORY}/poutreImageProcessingCoreTests)
add_subdirectory(poutreImageProcessingPixelProcessing ${TEMPORARY_DIRECTORY}/poutreImageProcessingPixelProcessingTests)
add_subdirectory(poutreImageProcessingSE ${TEMPORARY_DIRECTORY}/poutreImageProcessingSETests)
add_subdirectory(poutreIO ${TEMPORARY_DIRECTORY}/poutreIOTests)
add_subdirectory(poutreImageProcessingLowLevelMorphology ${TEMPORARY_DIRECTORY}/poutreImageProcessingLowLevelMorphologyTests)